# decisphere-env

./: .gitignore  Dockerfile  README.md  agent.py  app.py  demo.py  domain_tasks.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
decisphere-ai-spark-main/: index.html  tailwind.config.ts
decisphere-ai-spark-main/src/: index.css
decisphere-ai-spark-main/src/components/dashboard/: BenchmarkLeaderboard.tsx  EpisodeSimulation.tsx  Header.tsx  KPIStrip.tsx  ResourceOverview.tsx  RewardAnalysis.tsx  RiskCenter.tsx  TaskQueue.tsx
decisphere-ai-spark-main/src/components/ui/: alert-dialog.tsx  badge.tsx  button-utils.ts  button.tsx  calendar.tsx  chart.tsx  command.tsx  form-hooks.ts  form.tsx  navigation-menu-utils.ts  navigation-menu.tsx  pagination.tsx  sidebar-constants.ts  sidebar.tsx  textarea.tsx
decisphere-ai-spark-main/src/hooks/: useSimulation.ts
decisphere-ai-spark-main/src/lib/: api.ts  simulation.ts
decisphere-ai-spark-main/src/pages/: Index.tsx
server/: app.py  check_rewards.py  models.py
tasks/: loader.py
tasks/task1/: grader.py  task.json
tasks/task2/: grader.py  task.json
tasks/task3/: grader.py  task.json
tasks/task4/: grader.py  task.json
tasks/task5/: grader.py  task.json
wrappers/: gym_env.py
